Actualización de últimas clases

--- a/sesion_9/index.html
+++ b/sesion_9/index.html
@@ -16,6 +16,7 @@
       <div class="item">5</div>
       <div class="item">6</div>
       <div class="item ancho">7</div>
+      <img src="" alt="" />
     </div>
   </body>
 </html>
