Repaso de temas: localStorage

--- a/sesion_26/ecommerce.html
+++ b/sesion_26/ecommerce.html
@@ -80,7 +80,7 @@
                   class="btn btn-primary comprar"
                   id="producto_1"
                   data-precio="1000"
-                  data-producto="Producto X"
+                  data-producto="Producto X esto que está aca"
                   >Comprar</a
                 >
               </div>
