--- a/sesion_30/index.html
+++ b/sesion_30/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejemplo con NODE</title>
+    <link rel="stylesheet" href="./css/general.css" />
+    <script src="./js/cliente.js"></script>
   </head>
   <body>
     <h1>Bienvenidos</h1>
