--- a/sesion_30/status_error.html
+++ b/sesion_30/status_error.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body {
-        background-color: rgb(234, 187, 187);
-      }
-    </style>
+    <link rel="stylesheet" href="./css/status.css" />
   </head>
   <body>
     <h1>Email o contraseña incorrectos</h1>
