--- a/sesion_30/login.html
+++ b/sesion_30/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Formulario de Login</h1>
-    <form action="/form_login" method="post">
+    <form action="/form_login" method="post" id="formulario2">
       <input type="email" name="email" placeholder="Ingrese su email" />
       <br />
       <input
@@ -22,5 +22,10 @@
     <br /><br />
     <hr />
     <a href="/registrarse">Registrarse</a> | <a href="/inicio">Inicio</a>
+
+    <!--JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+    <script src="./js/cliente.js"></script>
   </body>
 </html>
