--- a/sesion_32/cliente/editar.html
+++ b/sesion_32/cliente/editar.html
@@ -5,27 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TodoList</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h2>Modificar Tarea</h2>
-    <form id="formEditar">
-      <input
-        type="text"
-        name="nombre"
-        placeholder="Ingrese la Tarea"
-        id="nombre_tarea"
-      />
-      <br />
-      <textarea
-        name="detalle"
-        cols="30"
-        rows="10"
-        placeholder="Ingrese el detalle de la Tarea"
-        id="detalle_tarea"
-      ></textarea>
-      <br />
-      <button type="submit">Actualizar</button>
-    </form>
+    <div class="container p-5">
+      <div class="row text-center mb-5">
+        <h1 class="display-5">TODO List</h1>
+        <p class="lead">Ejemplo realizado con JQuery + NodeJS + MongoDB</p>
+      </div>
+      <div class="row g-5 justify-content-center">
+        <div class="col-8">
+          <h3>Editar Tarea</h3>
+          <div class="border bg-light p-4">
+            <form id="formEditar">
+              <input
+                type="text"
+                name="nombre"
+                placeholder="Nombre de la Tarea"
+                id="nombre_tarea"
+                class="form-control"
+              />
+              <br />
+              <textarea
+                name="detalle"
+                cols="30"
+                rows="10"
+                placeholder="Detalle"
+                id="detalle_tarea"
+                class="form-control"
+              ></textarea>
+              <br />
+              <button type="submit" class="btn btn-success">Actualizar</button>
+              <a href="http://localhost:3000/" class="btn btn-link">Volver</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="../../script_editar.js"></script>
